import java.util.List;

public class Curriculo {
    private List<Curso> cursos;
}