@startuml
class Universidade {
    -curriculos: List<Curriculo>
}

class Curriculo {
    -cursos: List<Curso>
}

class Curso {
    -nome: String
    -creditos: int
    -cargaHoraria: int
    -disciplinas: List<Disciplina>
}

class Disciplina {
    -nome: String
    -numeroMinimoAlunos: int
    -numeroMaximoAlunos: int
    -cargaHoraria: int
    -status: String
    -professorResponsavel: Professor
    -alunosInscritos: List<Aluno>
}

interface Usuario {
    -nome: String
    -senha: String
}

class Aluno {
    -nome: String
    -senha: String
    -curso: Curso
    -matriculas: List<Matrícula>
}

class Professor {
    -nome: String
    -senha: String
    -disciplinas: List<Disciplina>
    +visualizarMatriculas(disciplina: Disciplina): List<Aluno>
}

class Secretaria {
    -nome: String
    +geriCurriculoSemestral(curriculo: Curriculo)
}

class Matrícula {
    -dataMatricula: Date
    -disciplina: Disciplina
    -aluno: Aluno
}

class SistemaDeCobrança {
    +notificarCobranca(aluno: Aluno, semestre: String)
}

Universidade "1" -- "1" Curriculo
Secretaria "1" -- "0..*" Curriculo
Curriculo "1" -- "0..*" Curso
Curso "1" -- "0..*" Disciplina
Disciplina "1" -- "0..*" Matrícula
Aluno "1" -- "0..*" Matrícula
Professor "0..*" -- "0..*" Disciplina

@enduml
